--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
-    "@aeternity/aepp-sdk": "^14.1.0"
+    "@aeternity/aepp-sdk": "^14.1.0",
+    "dotenv": "^17.2.3"
   }
 }
